fix margin issue where resizing breaks flex, add max-width to #page-wrap

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 #page-wrap {
-    width: 1100px;
+    max-width: 1100px;
     margin: 0 auto;
     text-align: left;
 }
